azure/test-site/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
  name: test-site
  namespace: test-site
spec:
  rules:
    - host: test.davideadie.dev
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: test-site
                port:
                  number: 80
  tls:
    - hosts:
        - test.davideadie.dev
      secretName: test-site-tls
